FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(dai.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(dai.i PROPERTIES SWIG_FLAGS "-classic")
SWIG_ADD_MODULE(dai python dai.i)
SWIG_LINK_LIBRARIES(dai ${PYTHON_LIBRARIES} ${GMP_LIBRARIES} dai)
